# SDL_V4l2_Cam

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  SDL_V4l2_Cam.c  config.h
src/v4l2_device/: v4l2_device.c  v4l2_device.h
